# 3DHeatTransfer

./: CMakeLists.txt  LICENSE  README.md  Wallring.vtk  build.sh  clean.sh  installDeps.bat  installDeps.sh  sh.sh
.github/workflows/: build-and-test.yml
VTKOutput/: temperature_step_0.vti  temperature_step_126.vti
include/: SolverCPU.hpp  bcType.hpp  boundaryConditions.hpp  extra.hpp  grid.hpp  heatMatrixBuilder.hpp  kernel.cuh  linearAlgebra.hpp  outputWriter.hpp  simGlobals.hpp  solver.hpp  solverCPU.hpp  solverCUDA.hpp  solverFactory.hpp  sparseMatrix.hpp  voxelReader.hpp
include/cudaHeaders/: boundaryConditions.cuh  kernel.cuh  linearAlgebra.cuh  solverCUDA.cuh
paper/: paper.bib  paper.html  paper.md
src/: binaryWriter.cpp  boundaryConditions.cpp  grid.cpp  kernel.cu  linearAlgebraCPU.cpp  linearAlgebraGPU.cu  main.cpp  outputWriter.cpp  solverCPU.cpp  solverCUDA.cpp  solverCUDA.cu  solverCUDAMatrix.cpp  solverCUDAStencil.cpp  voxelReader.cpp
src/cudaSrc/: boundaryConditions.cu  kernel.cu  linearAlgebraGPU.cu  solverCUDAMatrix.cu  solverCUDAStencil.cu
stlFiles/: cube.stl  cube_inlet.stl  cube_outlet.stl  cube_wall.stl  cylinder_inlet.stl  cylinder_outlet.stl  cylinder_volume.stl  cylinder_wall.stl
stlFiles/L_Channel/: l.stl  l_inlet.stl  l_outlet.stl  l_wall.stl
stlFiles/cube/: cube_inlet.stl  cube_wall.stl
stlFiles/cylinder/: cylinder.stl  cylinder_inlet.stl  cylinder_outlet.stl  cylinder_wall.stl
stlFiles/semiCylinder/: semicylinder.stl  semicylinder_inlet.stl  semicylinder_outlet.stl  semicylinder_wall.stl
stlFiles/sphere/: sphere.stl  sphere_inlet.stl  sphere_outlet.stl  sphere_wall.stl
tests/: test_matrixFulltest.cpp  test_stencilFulltest.cpp  tests.cpp  tests_.cpp  tests_VoxelReader.cpp  tests_analytical.cpp  tests_boundaryConditions.cpp  tests_cpuLinearAlgebra.cpp  tests_cuda.cu  tests_cudaLinAlgebra.cu  tests_grid.cpp  tests_main.cpp  tests_main.cu  tests_sparseMatrix.cpp  tests_utils.cpp  tests_utils.hpp  tests_vtkWriter.cpp
tests/include/: tests_utils.hpp
